--- a/src/web/static/wbr.css
+++ b/src/web/static/wbr.css
@@ -43,7 +43,7 @@
 
 .blockTableDiv {
     width: 100%;
-    height: 402px;
+    height: 100%;
     display: block;
 }
 
@@ -236,21 +236,26 @@ iframe {
 }
 
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-  position: fixed;
-  left: 44%;
-  top: 32%;
-  padding: 4%;
+    position: fixed;
+    left: 44%;
+    top: 32%;
+    width: 50px;
+    padding: 8px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background: #b59154;
+    --_m:
+    conic-gradient(#0000 10%,#000),
+    linear-gradient(#000 0 0) content-box;
+    -webkit-mask: var(--_m);
+          mask: var(--_m);
+    -webkit-mask-composite: source-out;
+          mask-composite: subtract;
+    animation: l3 1s infinite linear;
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+@keyframes l3 {
+    to{transform: rotate(1turn)}
 }
 
 input[type=password],
@@ -331,4 +336,11 @@ label {
   font-size: 18px; 
   fill: rgb(51, 51, 51); 
   border: 1px;
+}
+
+.card-body-bottom {
+    flex: 1 1 auto;
+    padding: 1.25rem;
+    height: 200px;
+    padding-left: 15px;
 }
