--- a/src/web/static/wbr.css
+++ b/src/web/static/wbr.css
@@ -338,7 +338,7 @@ label {
   border: 1px;
 }
 
-.majorEventsDiv {
+.annotationsDiv {
   margin-left: 20px;
   margin-top: 20px;
   white-space: break-spaces;
